fix: prevent some clipping

--- a/public/assets/main.css
+++ b/public/assets/main.css
@@ -36,5 +36,8 @@ iframe {
   border: 1px solid rgba(0, 0, 0, 0.22);
 }
 .v-application#app .theme--light.v-sheet.also-outlined {
-  border: 1px solid rgba(0, 0, 0, 0.16);
+  border: 2px solid rgba(0, 0, 0, 0.16);
+}
+.v-application#app .theme--light.v-sheet.not-outlined {
+  border: 2px solid transparent;
 }
